@@ -31,8 +31,10 @@ apt (0.8.16~exp9) UNRELEASED; urgency=low
     - dump the APT::Compressor settings correctly and completely
   * apt-pkg/contrib/fileutl.{h,cc}:
     - implement a ModificationTime method for FileFd
+  * apt-pkg/cdrom.cc:
+    - support InRelease files on cdrom
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Sat, 10 Dec 2011 20:02:29 +0100
+ -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 11 Dec 2011 01:30:12 +0100
 
 apt (0.8.16~exp8) experimental; urgency=low
 
